bcacheadm: add ability to find a dev uuid within a cacheset
simplifies input for finding stats for a single dev

Change-Id: I5d879aaa8cb68aaaedabd2bc780fbea4994e2541
Signed-off-by: Jacob Malevich <jam@daterainc.com>

--- a/bcacheadm.8
+++ b/bcacheadm.8
@@ -134,8 +134,11 @@ List all stats and their values for the given device.
 .BR \-l,\ --list
 List the names of the different stats for the given device.
 .TP
-.BR \-u,\ --uuid=
+.BR \-u,\ --set=
 UUID for the cacheset
+.TP
+.BR \-d,\ --dev=
+UUID for a device within the cacheset. Must pass in the cacheset UUID in order to search for a dev.
 .TP
 .BR \-c,\ --cache=
 Cache number, starts from 0
