--- a/README
+++ b/README
@@ -1,27 +1,12 @@
-These are the userspace tools required for bcache.
+Userspace tools for bcache-dev/bcachefs
 
-Bcache is a patch for the Linux kernel to use SSDs to cache other block
-devices. For more information, see http://bcache.evilpiepirate.org.
-Documentation for the run time interface is included in the kernel tree, in
-Documentantion/bcache.txt.
+This builds the bcache tool, which has a number of subcommands for formatting
+and managing bcachefs filesystems:
 
-Included tools:
+bcache format
+bcache unlock
+bcache assemble
+bcache incremental
+etc.
 
-make-bcache
-Formats a block device for use with bcache. A device can be formatted for use
-as a cache or as a backing device (requires yet to be implemented kernel
-support). The most important option is for specifying the bucket size.
-Allocation is done in terms of buckets, and cache hits are counted per bucket;
-thus a smaller bucket size will give better cache utilization, but poorer write
-performance. The bucket size is intended to be equal to the size of your SSD's
-erase blocks, which seems to be 128k-512k for most SSDs; feel free to
-experiment.
-
-probe-bcache
-Only necessary until support for the bcache superblock is included
-in blkid; in the meantime, provides just enough functionality for a udev script
-to create the /dev/disk/by-uuid symlink. The arguments it does support are the
-same as for blkid.
-
-bcache-super-show
-Prints the bcache superblock of a cache device or a backing device.
+Run bcache --help for full list of commands.
