finish ripping out libnih

--- a/INSTALL
+++ b/INSTALL
@@ -3,12 +3,11 @@ Dependencies:
 
  * libblkid
  * libuuid
- * libnih
  * libscrypt
  * libsodium
  * libkeyutils
 
 On debian, you can install these with
-    apt install -y libblkid-dev uuid-dev libnih-dev libscrypt-dev libsodium-dev libkeyutils-dev
+    apt install -y libblkid-dev uuid-dev libscrypt-dev libsodium-dev libkeyutils-dev
 
 Then, just make && make install
