format: document -U (used by many mkfs.*)

--- a/bcachefs.8
+++ b/bcachefs.8
@@ -126,7 +126,7 @@ Action to take on filesystem error (default:
 .It Fl L , Fl -label Ns = Ns Ar label
 Create the filesystem with the specified
 .Ar label
-.It Fl -uuid Ns = Ns Ar uuid
+.It Fl U , -uuid Ns = Ns Ar uuid
 Create the filesystem with the specified
 .Ar uuid
 .It Fl f , Fl -force
