Switch to liblz4

--- a/INSTALL
+++ b/INSTALL
@@ -14,6 +14,6 @@ Dependencies:
 On debian, you can install these with
     apt install -y pkg-config libblkid-dev uuid-dev libscrypt-dev libsodium-dev
 	libkeyutils-dev liburcu-dev zlib1g-dev libzstd-dev libattr1-dev
-	libaio-dev
+	libaio-dev liblz4-dev
 
 Then, just make && make install
